# dotfile-sync

./: .gitignore  CHANGELOG.md  LICENSE  default.nix  dotfile-sync.cabal  dotfile-sync.nix  flake.nix  hie.yaml  shell.nix
app/: Main.hs  Parse.hs  Types.hs
nix/: sources.json
test/: Test.hs
