cabal-version:      2.4
name:               dotfile-sync
version:            0.1.0.0
synopsis:           easy dotfile sync and configuration management

-- A longer description of the package.
description:
  This package contains both a standalone executable that can be used
  to sync your system's dotfiles to a git repository.
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Luis Chavarriaga
maintainer:         luischa123@gmail.com

-- A copyright notice.
-- copyright:
category:           System
extra-source-files: CHANGELOG.md

executable dotfile-sync
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , universum
                    , turtle
                    , mtl >= 2.2
    mixins:           base hiding (Prelude)
                    , universum (Universum as Prelude)
                    , universum 
    hs-source-dirs:   app
    default-language: Haskell2010
