cabal-version:      2.4
name:               dotfile-sync
version:            0.1.0.0
synopsis:           easy dotfile sync and configuration management

-- A longer description of the package.
description:
  This package contains both a standalone executable that can be used
  to sync your system's dotfiles to a git repository.
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Luis Chavarriaga
maintainer:         luischa123@gmail.com

-- A copyright notice.
-- copyright:
category:           System
extra-source-files: CHANGELOG.md


common deps
    build-depends:        base ^>=4.14.3.0
                        , universum
                        , turtle
                        , mtl >= 2.2
                        , optparse-applicative >= 0.16
                        , microlens >= 0.4
                        , microlens-th
                        , text >= 1.2
                        , exceptions >= 0.10
                        , regex
    ghc-options:          -Wall
                          -Wcompat
                          -Wincomplete-record-updates
                          -Wincomplete-uni-patterns
                          -Wredundant-constraints
                          -Wno-missing-signatures
    default-extensions:   LambdaCase
                        , NoStarIsType
                        , OverloadedStrings
                        , ScopedTypeVariables
                        , TypeApplications
                        , NamedFieldPuns
                        , FlexibleInstances


executable dotfile-sync
    import:               deps
    main-is:              Main.hs
    other-modules:        Types
                        , Parse
    mixins:               base hiding (Prelude)
                        , universum (Universum as Prelude)
                        , universum 
    hs-source-dirs:       app
    default-language:     Haskell2010


test-suite dotfile-sync-test
    import:               deps
    hs-source-dirs:       test
    main-is:              Test.hs
    type:                 exitcode-stdio-1.0
